2014-10-31  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (repo-update): Fix a typo and slightly reword
	commentary.

2014-10-31  Glenn Morris  <rgm@gnu.org>

	* version.el (emacs-bzr-version, emacs-bzr-get-version):
	Revert 2014-10-31 change.

2014-10-31  Eric S. Raymond  <esr@thyrsus.com>

	* version.el: Fix some fallback values to conform to the actual
	release number.

	* Makefile.in: Change some production names so they're neutral
	about the repository type.

2014-10-30  Kim F. Storm  <storm@cua.dk>

	Restore cua-delete-copy-to-register-0 and M-v command (bug#18886).
	* delsel.el (delete-selection-save-to-register)
	(delsel--replace-text-or-position): New vars.
	(delete-active-region): Use them.
	(delete-selection-repeat-replace-region): New command, moved from
	cua-base.el.
	* emulation/cua-base.el (cua--repeat-replace-text): Remove var.
	(cua-repeat-replace-region): Move command to delsel.el.
	(cua--init-keymaps): Update binding accordingly.
	(cua-mode): Set delete-selection-save-to-register.

2014-10-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cc-defs.el (c--macroexpand-all): New function (bug#18845).
	(c-lang-defconst):
	* progmodes/cc-langs.el (c-make-init-lang-vars-fun): Use it.

2014-10-29  Eli Zaretskii  <eliz@gnu.org>

	* progmodes/compile.el (compilation-start):
	If compilation-scroll-output is non-nil, don't force window-start of
	the compilation buffer to be at beginning of buffer.  (Bug#18874)

2014-10-23  Tassilo Horn  <tsdh@gnu.org>

	* doc-view.el (doc-view-open-text): View the document's plain text
	in the current buffer instead of a new one.
	(doc-view-toggle-display): Handle the case where the current
	buffer contains the plain text contents of the document.
	(doc-view-initiate-display): Don't switch to fallback mode if the
	user wants to view the doc's plain text.  [Backport]

2014-10-23  Eli Zaretskii  <eliz@gnu.org>

	* startup.el (fancy-about-text): Read the entire tutorial, not
	just its first 256 bytes.  (Bug#18760)
